--- a/.travis.yml
+++ b/.travis.yml
@@ -23,12 +23,13 @@ matrix:
         apt:
           sources:
             - ubuntu-toolchain-r-test
-            - kalakris-cmake
+            - george-edison55-precise-backports
           packages:
             - xorg-dev
             - libglu1-mesa-dev
             - g++-4.8
             - cmake
+            - cmake-data
             - libblas-dev
             - liblapack-dev
     #         - binutils
